# csv-toolbox

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1706272863355-1d73688d0b22c.mjs
mock/: account.mock.ts  route.mock.ts
public/: serverConfig.json
public/pwa/: site.webmanifest
src/: main.ts
src-tauri/: Cargo.toml  cargo.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src-tauri/src/dlib/: cat.rs  count.rs  csv2xlsx.rs  data4mysql.rs  dataprocess.rs  excel2csv.rs  filter.rs  getfilename.rs  insert.rs  mod.rs  pivot.rs  rename.rs  search.rs  select.rs  sqlp.rs
src/components/: TsxComponents.tsx
src/components/Application/: index.ts
src/layouts/page-layouts/components/AppTabs/: index.vue
src/layouts/page-layouts/components/Navbart/: index.vue
src/locales/modules/: en.json  zh-CN.json
src/router/modules/components/: index.ts
src/router/modules/externa-link/: index.ts
src/router/modules/functions/: index.ts
src/styles/: index.scss
src/views/about/: index.vue
src/views/command/box/: index.vue
src/views/command/box/components/: InsertBlank.vue  InsertFill.vue
src/views/command/cat/: index.vue
src/views/command/cat-convert/: index.vue
src/views/command/cat-convert/components/: Excel2csv.vue
src/views/command/convert/components/: Csv2xlsx.vue  Excel2csv.vue
src/views/command/count/: index.vue
src/views/command/file/: index.vue
src/views/command/file/components/: GetFileName.vue
src/views/command/polars/components/: Pivot.vue  Unique.vue
src/views/command/rename/: index.vue
src/views/command/search/: index.vue
src/views/command/select/: index.vue
src/views/components/box/: index.vue
src/views/components/box/components/: Select.vue
src/views/components/cat-convert/components/: Concat.vue  Csv2xlsx.vue
src/views/components/database/: index.vue
src/views/components/database/components/: Data4mysql.vue
src/views/components/file/: index.vue
src/views/components/file/components/: InsertFill.vue  Select.vue
src/views/components/form/: index.vue
src/views/components/form/components/: ContainsSelect.vue  Count.vue  Filter.vue  InsertBlank.vue  IsinSelect.vue  Rename.vue  SQLquery.vue  Select.vue
src/views/components/polars/: index.vue
src/views/components/rename/: index.vue
src/views/components/select/: index.vue
src/views/echarts/bar/components/: BarRace.vue
src/views/echarts/map/: index.vue
src/views/functions/water-mark/: index.vue
src/views/index/: index.vue
src/views/index/components/: Concat.vue  ConcatSpecific.vue  Csv2xlsx.vue  Data4mysql.vue  Etoc.vue  Excel2csv.vue  Pivot.vue  Unique.vue
src/views/login/compoontne/: form.vue
