[package]
name = "tauri-toolkit"
version = "0.3.9"
description = "tauri toolkit"
authors = ["tansen"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dlib"
path = "src/dlib/mod.rs"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = ["api-all"] }
csv = "1.3.0"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-native-tls", "rust_decimal"] }
tokio = { version="1.36.0", features= ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.32"
rust_decimal = "1.35.0"
chrono = "0.4.37"
futures = "0.3.30"
polars = { version = "0.39.2", features = [
    "lazy",
    "diagonal_concat",
    ] }
rust_xlsxwriter = "0.64.1"
calamine = { version = "0.24.0", features = ["dates"] }
rayon = "1.10.0"
ryu = "1"
itoa = "1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
