[package]
name = "csv-toolbox"
version = "0.3.10"
description = "csv-toolbox"
authors = ["tansen"]
license = ""
repository = "https://github.com/tansen87/csv-toolbox"
edition = "2021"
rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dlib"
path = "src/dlib/mod.rs"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
calamine = { version = "0.25.0", features = ["dates"] }
chrono = "0.4.38"
csv = "1.3.0"
futures = "0.3.30"
itoa = "1"
polars = { version = "0.42.0", features = [
    "lazy",
    "diagonal_concat",
    "csv",
] }
rayon = "1.10.0"
rust_decimal = "1.35.0"
rust_xlsxwriter = "0.72.0"
ryu = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.7.1", features = ["api-all"] }
tokio = { version="1.38.1", features= ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
